@@ -1,3 +1,6 @@
+14/07/2020
+-   fixed department prestige
+
 10/07/2020
 -   more acceleration
 
